@@ -86,6 +86,12 @@ button. An asterisk (*) is displayed in the title bar when the entry's
 modified and Apply's not clicked upon. Thanks to shivak7 for the fix.
 </td>
 </tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3539347);return false;">3539347</a></td>
+<td>An empty diamond icon is now updated to a full one when an
+entry is dragged into it. Thanks to nsaipraveen for the fix.
+</td>
+</tr>
 </tbody>
 </table>
 <br>
